crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__todo.invalid.invalid-rules-of-hooks-206e2811c87c.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/todo.invalid.invalid-rules-of-hooks-206e2811c87c.js
---
No changes.
