crates/oxc_react_compiler/tests/snapshots/rules-of-hooks__todo.invalid.invalid-rules-of-hooks-28a7111f56a7.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/rules-of-hooks/todo.invalid.invalid-rules-of-hooks-28a7111f56a7.js
---
No changes.
